# fs-azureblob

./: README.md  backup.py  create_index.py  index.css  noxfile.py  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
fs/: blob_fs.py
fs/azblob/: __init__.py  blob_file.py  blob_fs.py  blob_fs_v2.py  const.py  error_tools.py  helpers.py
fs/opener/: blob_fs.py
src/: blob_fs.py  opener.py
tests/: __init__.py  test.py  test_blob_fs.py
