[metadata]
name = fs-azureblob
version = 0.1.0
author = Breakthrough Energy
author_email = sciences@breakthroughenergy.org
description = Azure blob storage filesystem for PyFilesystem2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/fs-azureblob
project_urls =
    Bug Tracker = https://github.com/Breakthrough-Energy/fs-azureblob/issues
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = fs.azblob, fs.opener
python_requires = >=3.8
install_requires =
    fs~=2.4.13
    azure-storage-blob
    azure-storage-file-datalake

[options.entry_points]
fs.opener =
    azblob = fs.opener.blob_fs:BlobFSOpener
    azblobv2 = fs.opener.blob_fs:BlobFSV2Opener

[flake8]
ignore = E501

[mypy]
show_error_codes = true
ignore_missing_imports = true

[mypy-fs.*]
ignore_missing_imports = false

[pytype]
disable = import-error

[tool:pytest]
# addopts = -s
markers =
    creds: marks tests which require credentials (deselect with '-m "not creds"')
